<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin_20">

        <TextView
            android:id="@+id/activity_reward_points_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:text="@string/current_balance"
            android:textColor="#675788"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/activity_reward_points_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingTop="@dimen/margin_5"
            android:text="@string/dot"
            android:textColor="@color/silver"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/activity_redeem_points_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingTop="@dimen/margin_10"
            android:text="@string/minimum_points_to_redeem"
            android:textColor="#675788"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/activity_redeem_points_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:paddingTop="@dimen/margin_5"
            android:text="@string/dot"
            android:textColor="@color/silver"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/text_shop_now"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:background="@color/gray_50"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/shopNow"
            android:textColor="#6a5292"
            android:textSize="46sp" />
    </LinearLayout>
</LinearLayout>
