<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin_10"
    android:layout_marginRight="@dimen/margin_10"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:padding="@dimen/margin_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_5"
        android:layout_marginRight="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_30"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_send_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/textview_border_black"
            android:digits="abccdefghijklmnopqurstuvwyxzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:hint="@string/Name"
            android:padding="@dimen/margin_10"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@+id/activity_send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/textview_border_black"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin_10"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@+id/activity_send_query"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/textview_border_black"
            android:digits="abccdefghijklmnopqurstuvwyxzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:gravity="start"
            android:hint="@string/query"
            android:padding="@dimen/margin_10"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/text_size_large" />

        <Button
            android:id="@+id/messenger_send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@color/app_theme_color"
            android:padding="@dimen/margin_20"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:visibility="gone">

            <TextView
                android:id="@+id/heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:paddingLeft="@dimen/margin_10"
                android:paddingStart="@dimen/margin_10"
                android:text="@string/or_whatsapp"
                android:textColor="@color/app_theme_color"
                android:textSize="@dimen/text_size_very_large" />

            <TextView
                android:id="@+id/heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/heading1"
                android:layout_below="@+id/heading1"
                android:layout_marginTop="3dp"
                android:paddingLeft="@dimen/margin_10"
                android:text="@string/PhoneNumber"
                android:textColor="@color/app_theme_color"
                android:textSize="@dimen/text_size_very_large" />

            <ImageView
                android:id="@+id/relativelayout_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/heading1"
                android:src="@drawable/whatsapp_icon3"
                android:contentDescription="@string/whatapp_icon" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>